Fixed mobile teaser image on Safari.

--- a/master.css
+++ b/master.css
@@ -71,7 +71,7 @@ body.index {/* background: url('images/bg_index.jpg') repeat-x #f8f8f8; */backgr
 .index #intro { /*float: left; width: 560px;*/ margin-bottom: 50px; position: relative; z-index: 999; }
 .index #screenshot { position: absolute; /*right: 0; top: 20px; width: 500px;*/ right: -121px; top: 50px; width: 740px; height: 327px; z-index: 150; background: url('images/arkaplan1.png'); }
 .index .mobile-teaser {width:600px; position:absolute; display:block; left:590px; top:309px; z-index:1000;}
-.index .mobile-teaser .mobile-download-link {position:absolute; left:200px; width:192px; height:105px; background: url(images/mobile_mini.png) no-repeat scroll center center / 192px 105px transparent; z-index:1;}
+.index .mobile-teaser .mobile-download-link {position:absolute; left:200px; width:192px; height:105px; background-image: url(images/mobile_mini.png); background-repeat: no-repeat; background-position: center center; background-size: 192px 105px; z-index:1;}
 
 /* call to action */
 .index #cta, .compare #cta { position: relative; width: 468px; padding: 6px 0px 6px 30px; background:#e0e8f0; background: rgba(255, 255, 255, .6); color: #999; font-size: 23px; font-weight: 100; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; line-height: 30px; color: #2782B2; /*box-shadow: 0 1px 3px 0 #f0f0f0; -webkit-box-shadow: 0 1px 3px 0 #f0f0f0; -moz-box-shadow: 0 1px 3px 0 #f0f0f0;*/ }
